# ecommerce-dashboard-streamlit

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test_cloud_connection.py  wsgi.py
.continue/agents/: new-config.yaml
docs/: business_intelligence_concepts.md
docs/coding_sessions/: session_20260425_2200.md
docs/phase_1/: implementation_plan.md
docs/phase_2/: data_infrastructure.md
docs/phase_3/: application_services.md
docs/phase_4/: streamlit_interface.md
docs/phase_5/: deployment_validation.md
docs/phase_6/: cloud_integration.md
docs/phase_7/: implementation_plan.md
docs/phase_8/: implementation_plan.md
skills/: errors.md  future_projects.md  requirements.md  skills.md  ux_laws.md
src/: __init__.py
src/application/: kpi_service.py
src/domain/: __init__.py  customer_identifier.py  data_provider_interface.py  invoice_identifier.py  kpi.py  kpi_date.py  kpi_target.py  kpi_value.py  money.py  repository_interface.py  segmentation_thresholds.py  transaction_type.py
src/infrastructure/: cloud_data_provider.py  hybrid_data_provider.py  local_file_data_provider.py  polars_repository.py
src/infrastructure/web/: ui_components.py
tests/integration/infrastructure/: test_cloud_data_provider.py  test_polars_repository.py
tests/performance/: data_generator.py  test_efficiency.py
tests/unit/application/: test_kpi_service.py
tests/unit/domain/: test_identifiers.py  test_kpi.py  test_kpi_date.py  test_kpi_target.py  test_kpi_value.py  test_money.py  test_segmentation_thresholds.py
