[project]
name = "kpi-dashboard"
version = "0.1.0"
description = "KPI Dashboard for large-scale datasets"
readme = "README.md"
authors = [
    { name = "Christian Tarifeno", email = "christiantarifer@gmail.com" }
]
requires-python = ">=3.13.11"
dependencies = [
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "ruff>=0.9.0",
    "streamlit>=1.56.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]


[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "B", "ANN"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["application", "domain", "infrastructure"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "mimesis>=19.1.0",
    "psutil>=7.2.2",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]
